Bug 405975 - Crash when changing Mail Folder name in KMail
Summary: Crash when changing Mail Folder name in KMail
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-28 19:42 UTC by Allen Winter
Modified: 2019-04-03 15:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11
Sentry Crash Report:


Attachments
sigsegv backtrace (8.63 KB, text/plain)
2019-03-28 19:42 UTC, Allen Winter
Details
sigsegv backtrace, less cruft (4.61 KB, text/plain)
2019-03-28 20:13 UTC, Allen Winter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2019-03-28 19:42:19 UTC
Created attachment 119108 [details]
sigsegv backtrace

SUMMARY
Got this crash after renaming a folder in KMail

STEPS TO REPRODUCE
1. create new subfolder
2. open its properties dialog and change the folder name
3. click ok

OBSERVED RESULT
see crash bt

EXPECTED RESULT
no crash

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
Kontact Version 5.10.90 beta1
KDE Frameworks 5.57.0
Qt 5.11.3 (built against 5.11.3)
The xcb windowing system
Comment 1 Allen Winter 2019-03-28 20:13:25 UTC
Created attachment 119109 [details]
sigsegv backtrace, less cruft
Comment 2 Christophe Marin 2019-03-29 09:05:34 UTC
The rules didn't change, we still paste the backtraces inline :)

#3  0x00007f8d85970458 in PimCommon::CollectionAclPage::save(Akonadi::Collection&) (this=0x6a35300, collection=...) at /data/kde/src/5/kde/pim/pimcommon/src/pimcommonakonadi/acl/collectionaclpage.cpp:92
#4  0x00007f8de52e870e in Akonadi::CollectionPropertiesDialog::Private::save() (this=0x7f8d2405bd10) at /data/kde/src/5/kde/pim/akonadi/src/widgets/collectionpropertiesdialog.cpp:56
#5  0x00007f8de52e7181 in Akonadi::CollectionPropertiesDialog::Private::<lambda()>::operator()(void) const (__closure=0x7de0ea0) at /data/kde/src/5/kde/pim/akonadi/src/widgets/collectionpropertiesdialog.cpp:169
#6  0x00007f8de52e856d in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Akonadi::CollectionPropertiesDialog::Private::init()::<lambda()> >::call(Akonadi::CollectionPropertiesDialog::Private::<lambda()> &, void **) (f=..., arg=0x7ffe7fa35780) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:128
#7  0x00007f8de52e854e in QtPrivate::Functor<Akonadi::CollectionPropertiesDialog::Private::init()::<lambda()>, 0>::call<QtPrivate::List<>, void>(Akonadi::CollectionPropertiesDialog::Private::<lambda()> &, void *, void **) (f=..., arg=0x7ffe7fa35780) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:238
#8  0x00007f8de52e851c in QtPrivate::QFunctorSlotObject<Akonadi::CollectionPropertiesDialog::Private::init()::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x7de0e90, r=0x6b70540, a=0x7ffe7fa35780, ret=0x0) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:421
#9  0x00007f8de5bc71c3 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#10 0x00007f8de67245b6 in QAbstractButton::clicked(bool) () at /usr/lib64/libQt5Widgets.so.5
Comment 3 Allen Winter 2019-04-02 16:24:35 UTC
https://phabricator.kde.org/D20207 has a possible patch
Comment 4 Daniel Vrátil 2019-04-03 15:59:05 UTC
Git commit 6a91923b8a9f31b75b520725f4b310203fbfb13b by Daniel Vrátil.
Committed on 03/04/2019 at 15:58.
Pushed by dvratil into branch 'Applications/19.04'.

Fix crash when applying collection ACL changes

Summary:
Another regression caused by switch to const/non-const attributes.
FIXED-IN: 5.11

Test Plan:
Couldn't reproduce the crash described in the bug report, but the backtrace
is fairly obvious.

Reviewers: #kde_pim, lbeltrame

Reviewed By: lbeltrame

Subscribers: lbeltrame, kde-pim, winterz

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D20159

M  +2    -2    src/pimcommonakonadi/acl/collectionaclpage.cpp

https://commits.kde.org/pimcommon/6a91923b8a9f31b75b520725f4b310203fbfb13b