Fix crash when applying collection ACL changes

Summary:
Another regression caused by switch to const/non-const attributes.

BUG: 405975
FIXED-IN: 5.11

Test Plan:
Couldn't reproduce the crash described in the bug report, but the backtrace
is fairly obvious.

Reviewers: #kde_pim, lbeltrame

Reviewed By: lbeltrame

Subscribers: lbeltrame, kde-pim, winterz

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D20159